[package]

name = "touchpage"
version = "0.1.1"
authors = ["Ben Burdette <bburdette@gmail.com>"]

description = "control panel server with shared-state web controls"
homepage = "https://github.com/bburdette/touchpage"
repository = "https://github.com/bburdette/touchpage.git"
readme = "README.md"
keywords = []

license = "MIT"
include = [ "src/**/*", 
            "elm/**/*", 
            "Cargo.toml", 
            "Cargo.lock", 
            "README.md", 
            "LICENSE", 
            "runit.sh", 
            "default.nix", 
            "ns.sh"]

[dependencies]
actix = "0.7.5"
actix-web = { version = "0.7.13" }
websocket = "0.23.0"
serde_json = "0.7.0"
serde = "0.5.3"
# iron = "0.6.0"
time = "0.1.34" 
tinyosc = "0.0.3"
failure = "0.1.1"
env_logger = "0.5.13"
log = "0.4.0"

