[package]

name = "touchpage"
version = "0.2.2"
authors = ["Ben Burdette <bburdette@gmail.com>"]

description = "control panel server with shared-state web controls"
homepage = "https://github.com/bburdette/touchpage"
repository = "https://github.com/bburdette/touchpage.git"
readme = "README.md"
keywords = []

license = "MIT"
include = [ "src/**/*", 
            "elm/**/*", 
            "Cargo.toml", 
            "Cargo.lock", 
            "README.md", 
            "LICENSE", 
            "runit.sh", 
            "default.nix", 
            "ns.sh"]

[dependencies]
actix = "0.7.5"
actix-web = { version = "0.7.13" }
# websocket = "0.26.5"
tungstenite = "0.18.0"
serde_json = "1.0"
serde = "1.0"
# iron = "0.6.0"
time = "0.1.34" 
tinyosc = "0.0.3"
failure = "0.1.1"
env_logger = "0.5.13"
log = "0.4.0"
toml = "0.4.8"

